--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           </div>    
           <div class="col-lg-4 col-md-6 portfolio-item filter-qualidade">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/dividatecnica.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/dividatecnica.JPG" class="img-fluid" alt="">
              <!--  <div class="portfolio-links">
                 <a href="portfolio-dividatecnica.html" title="Dívida técnica"><i class="bi bi-link"></i></a>
               </div> -->
