corrigido o logo do cliente

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
         <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="100">
           <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="assets/img/clients/irrah.png" class="img-fluid" alt="Grupo Irrah"></div>
-            <div class="swiper-slide"><img src="assets/img/clients/db1.jpg" class="img-fluid" alt="DB1 Group"></div>
+            <div class="swiper-slide"><img src="assets/img/clients/db1.png" class="img-fluid" alt="DB1 Group"></div>
             <div class="swiper-slide"><img src="assets/img/clients/playescolar2.png" class="img-fluid" alt="PLayescolar"></div>
             <div class="swiper-slide"><img src="assets/img/clients/prosper.jpg" class="img-fluid" alt="Prosper Tech Talent"></div>
             <div class="swiper-slide"><img src="assets/img/clients/vincit2.png" class="img-fluid" alt="Faculdade Vincit"></div>
