adicionado um conteudo de okr

--- a/index.html
+++ b/index.html
@@ -513,19 +513,20 @@
             </a>  
           </div>
 
-          <div class="col-lg-4 col-md-6 content-item filter-podcast">
-            <a href="https://k21.global/br/podcast/love-the-road-como-acabar-com-seu-debito-tecnico-agile-trends" target="_blank">
-              <img src="assets/img/content/podcast2.png" class="img-fluid" alt=""/>
-                <h4>Como acabar com seu débito técnico</h4>
-                <p>Podcast Love the problem</p>
-            </a>  
-          </div>
 
           <div class="col-lg-4 col-md-6 content-item filter-palestras">
             <a href="https://youtu.be/jM42CP6ed0E?si=MPl74i6k2z2EShKn" target="_blank">
               <img src="assets/img/content/transformacaodigital.JPG" class="img-fluid" alt=""/>
               <h4>Transformação Digital</h4>
               <p>Masterclass Uniasselvi</p>
+            </a>  
+          </div>
+
+          <div class="col-lg-4 col-md-6 content-item filter-palestras">
+            <a href="https://youtu.be/r99fQ4BNHuI" target="_blank">
+              <img src="assets/img/content/okr-ufpr.JPG" class="img-fluid" alt=""/>
+              <h4>Entregando resultados e não atividades - OKR</h4>
+              <p>UFPR - Jandaia do Sul</p>
             </a>  
           </div>
 
@@ -608,6 +609,15 @@
               <p>Podcast Tallercast</p>
             </a>  
           </div>
+
+          <div class="col-lg-4 col-md-6 content-item filter-podcast">
+            <a href="https://k21.global/br/podcast/love-the-road-como-acabar-com-seu-debito-tecnico-agile-trends" target="_blank">
+              <img src="assets/img/content/podcast2.png" class="img-fluid" alt=""/>
+                <h4>Como acabar com seu débito técnico</h4>
+                <p>Podcast Love the problem</p>
+            </a>  
+          </div>
+
 
           <div class="col-lg-4 col-md-6 content-item filter-palestras">
             <a href="https://www.youtube.com/watch?v=L8fvtQSCzlc" target="_blank">
