incluindo novos clientes e universidades

--- a/index.html
+++ b/index.html
@@ -438,6 +438,16 @@
               </a>
             </div>
             <div class="swiper-slide">
+              <a href="https://www.instagram.com/cesemmaringa/" target="_blank">
+                <img src="assets/img/clients/cesem.png" class="img-fluid" alt="CESEM"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="https://www.1rimaringa.com.br/" target="_blank">
+                <img src="assets/img/clients/1RI.png" class="img-fluid" alt="1º Registro de Imóveis de Maringá"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
               <a href="https://playescolar.gg/" target="_blank">
                 <img src="assets/img/clients/playescolar2.png" class="img-fluid" alt="Playescolar"/>
               </a>
@@ -447,11 +457,7 @@
                 <img src="assets/img/clients/prosper.jpg" class="img-fluid" alt="Prosper Tech Talent"/>
               </a>
             </div>
-            <div class="swiper-slide">
-              <a href="https://www.faculdadevincit.edu.br/" target="_blank">
-                <img src="assets/img/clients/vincit2.png" class="img-fluid" alt="Faculdade Vincit"/>
-              </a>
-            </div>
+
             <div class="swiper-slide">
               <a href="https://www.iesde.com.br/" target="_blank">
                 <img src="assets/img/clients/iesde.png" class="img-fluid" alt="IESDE"/>
@@ -465,7 +471,39 @@
           </div>
           <div class="swiper-pagination"></div>
         </div>
-
+        <div class="section-title">
+          <h2>Universidades que ministro aulas</h2>
+        </div>
+        <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide">
+              <a href="https://www.uem.br/" target="_blank">
+                <img src="assets/img/aula/uem.png" class="img-fluid" alt="UEM"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="https://www.unicesumar.edu.br/" target="_blank">
+                <img src="assets/img/aula/unicesumar.png" class="img-fluid" alt="Unicesumar"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="https://unicv.edu.br/" target="_blank">
+                <img src="assets/img/aula/unicv.png" class="img-fluid" alt="Uniciv"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="https://www.pucpr.br/" target="_blank">
+                <img src="assets/img/aula/pupr.png" class="img-fluid" alt="PUC-PR"/>
+              </a>
+            </div>
+            <div class="swiper-slide">
+              <a href="https://www.faculdadevincit.edu.br/" target="_blank">
+                <img src="assets/img/clients/vincit2.png" class="img-fluid" alt="Faculdade Vincit"/>
+              </a>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
       </div>
     </section> 
     <!-- ======= content Section ======= -->
