corrigido o contato via whatsapp

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>-->
-          <li><a class="nav-link scrollto" href="https://web.whatsapp.com/send?phone=5544988290562" target="_blank">Contato</a></li>
+          <li><a class="nav-link scrollto" href="https://wa.me/5544988290562?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es." target="_blank">Contato</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -386,7 +386,7 @@
                 </div>
                 
                 <div class="social">
-                  <a href="https://web.whatsapp.com/send?phone=5544988290562"><i class="bi bi-whatsapp"></i></a>
+                  <a href="https://wa.me/5544988290562?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es."><i class="bi bi-whatsapp"></i></a>
                   <a href="https://www.linkedin.com/in/wagnerfusca/"><i class="bi bi-linkedin"></i></a>
                   <a href="https://www.youtube.com/wagnerfusca"><i class="bi bi-youtube"></i></a>
                   <a href="https://www.instagram.com/wagnerfusca/"><i class="bi bi-instagram"></i></a>
@@ -809,7 +809,7 @@
             <h4>Redes Sociais</h4>
             <p>Para mais conteúdos e contatos, acesse as minhas redes sociais</p>
             <div class="social-links mt-3">
-              <a href="https://web.whatsapp.com/send?phone=5544988290562" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+              <a href="https://wa.me/5544988290562?text=Ol%C3%A1%2C%20gostaria%20de%20saber%20mais%20informa%C3%A7%C3%B5es." class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
               <a href="https://www.linkedin.com/in/wagnerfusca/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
               <a href="https://www.youtube.com/wagnerfusca" class="youtube"><i class="bx bxl-youtube"></i></a>
               <a href="https://www.instagram.com/wagnerfusca/" class="instagram"><i class="bx bxl-instagram"></i></a>
